--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -39,10 +39,10 @@ minversion = "6.0"
 addopts = "--random-order --cov=lm_agent --cov-report=term-missing --cov-fail-under=70"
 testpaths = ["tests"]
 env = [
-    "AUTH0_DOMAIN = str",
-    "AUTH0_AUDIENCE = str",
-    "AUTH0_CLIENT_ID = str",
-    "AUTH0_CLIENT_SECRET = str",
+    "LM2_AGENT_AUTH0_DOMAIN = str",
+    "LM2_AGENT_AUTH0_AUDIENCE = str",
+    "LM2_AGENT_AUTH0_CLIENT_ID = str",
+    "LM2_AGENT_AUTH0_CLIENT_SECRET = str",
 ]
 
 [tool.black]
