--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ asyncpg = "^0.24.0"
 aws-psycopg2 = "^1.2.1"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.0"
+mangum = "^0.12.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
