--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,9 +10,7 @@ packages = [{ include = "lm_backend" }]
 python = ">=3.8,<3.9"
 fastapi = "^0.68.0"
 sentry-sdk = "^1.3.1"
-SQLAlchemy = "1.3.23"
 jwt = {version = "^1.2.0", optional = true}
-databases = {extras = ["postgresql"], version = "^0.4.3"}
 SQLAlchemy-Utils = "^0.37.8"
 loguru = "^0.5.3"
 asyncpg = "^0.24.0"
@@ -20,6 +18,8 @@ aws-psycopg2 = "^1.2.1"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.0"
 armasec = "^0.7.3"
+SQLAlchemy = "^1.4.29"
+databases = {extras = ["postgresql"], version = "^0.5.3"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
