LM-178 Fixed token caching mechanism to use home directory

--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -45,6 +45,7 @@ env = [
     "LM2_AGENT_BACKEND_BASE_URL = http://backend",
     "LM2_AGENT_LMUTIL_PATH = ./tests/mock_tools",
     "LM2_AGENT_RLMUTIL_PATH = ./tests/mock_tools",
+    "LM2_AGENT_LOG_LEVEL = DEBUG",
 ]
 
 [tool.black]
