--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,9 @@ version = "2.2.13"
 description = "Provides an API for managing license data"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
+readme = "README.rst"
+repository = "https://github.com/omnivector-solutions/license-manager"
+documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [{ include = "lm_backend" }]
 
 [tool.poetry.dependencies]
