--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lm-cli"
+name = "license-manager-cli"
 version = "2.2.13"
 description = "License Manager CLI Client"
 authors = ["Omnivector Solutions <info@omnivector.solutions>"]
