--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -11,17 +11,17 @@ packages = [ { include = "lm_cli" } ]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6.2"
 pydantic = "^1.9.1"
-rich = "^12.4.4"
+rich = "^11.2.0"
 pyperclip = "^1.8.2"
 python-jose = "^3.3.0"
 loguru = "^0.6.0"
 py-buzz = "^3.1.1"
 typer = "^0.4.1"
 pendulum = "^2.1.2"
-httpx = "^0.23.0"
-importlib-metadata = "^4.11.4"
+httpx = "^0.22.0"
+importlib-metadata = "^4.2"
 python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
@@ -29,12 +29,11 @@ black = "^22.3.0"
 isort = "^5.10.1"
 mypy = "^0.961"
 plummet = "^1.1.0"
-pytest = "^7.1.2"
 pytest-random-order = "^1.0.4"
 pytest-cov = "^3.0.0"
-pytest-responsemock = "^1.1.1"
+pytest-responsemock = "^1.0.1"
 pytest-env = "^0.6.2"
-pytest-mock = "^3.8.2"
+pytest-mock = "^3.6.0"
 respx = "^0.19.2"
 pyproject-flake8 = "^0.0.1-alpha.4"
 
@@ -50,13 +49,12 @@ addopts = [
     "--cov-fail-under=75",
 ]
 env = [
-    "LM_API_ENDPOINT = https://armada-k8s.staging.omnivector.solutions/lm/api/v1",
+    "LM_API_ENDPOINT = https://dummy_api.com/lm/api/v1",
     "LM_DEBUG = false",
     "OIDC_DOMAIN = dummy_auth_domain.com",
     "OIDC_AUDIENCE = https://dummy_auth_audience.com",
     "OIDC_CLIENT_ID = dummy_client_id",
-    "OIDC_CLIENT_SECRET = dummy_client_secret",
-    "IDENTITY_CLAIMS_KEY = https://test-domain.test",
+    "IDENTITY_CLAIMS_KEY = email",
 ]
 
 [tool.black]
