--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ python-dotenv = "^0.19.0"
 armasec = "^0.11"
 SQLAlchemy = "^1.4.29"
 databases = {extras = ["postgresql"], version = "^0.5.3"}
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -70,6 +71,7 @@ include_trailing_comma = true
 module = [
     "asyncpg.*",
     "pkg_resources",
+    "toml",
 ]
 ignore_missing_imports = true
 
