--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ armasec = "^0.11"
 SQLAlchemy = "^1.4.29"
 databases = {extras = ["postgresql"], version = "^0.5.3"}
 toml = "^0.10.2"
+py-buzz = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
