--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -11,7 +11,7 @@ packages = [ { include = "lm_cli" } ]
 
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "^3.6.2,<4.0"
 pydantic = "^1.9.1"
 rich = "^11.2.0"
 pyperclip = "^1.8.2"
