--- a/.github/workflows/publish_on_tag.yaml
+++ b/.github/workflows/publish_on_tag.yaml
@@ -19,13 +19,15 @@ jobs:
       matrix: { sub_project: ['agent', 'backend', 'lm-cli']}
       fail-fast: false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.10
   
-      - uses: Gr1N/setup-poetry@v7
+      - uses: Gr1N/setup-poetry@v8
+        with:
+          poetry-version: 1.4.1
 
       - id: poetry-package-version
         name: Get project's version
