--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,8 +20,7 @@ asyncpg = "^0.24.0"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.0"
 armasec = "^0.11"
-SQLAlchemy = "^1.4.29"
-databases = {extras = ["postgresql"], version = "^0.5.3"}
+SQLAlchemy = {extras = ["asyncio"], version = "^2.0.7"}
 toml = "^0.10.2"
 py-buzz = "^3.2.1"
 psycopg2 = "^2.9.5"
